------------------------------------------------------------------------
r377 | gaser | 2010-12-17 13:33:06

M      cg_vbm8_defaults.m
M      cg_vbm8_longitudinal_multi_run.m
M      cg_vbm8_run.m
M      tbx_cfg_vbm8.m
M      cg_spmF2x.m
M      cg_vbm8_longitudinal.m
M      cg_vbm8_write.m
M      cg_spmT2x.m

(1) Added option for defining Dartel template.
(2) Disabled warning for deletion of not found files in 
    cg_vbm8_longitudinal_multi_run.m.
(3) Corrected use of spm_fileparts in cg_spmT2x.m and cg_spmF2x.m.
(4) Refused new longitudinal processing pipeline because no improvement could
    be obtained.

------------------------------------------------------------------------
r377 | gaser | 2010-12-20 16:02:09

M       cg_vbm8_tools.m
M       cg_slice_overlay_ui.m
M       cg_spmT2x.m

(1) Corrected error in cg_spmT2x.m, where sometimes extent thresholds were
    ignored.
(2) Added some options to cg_slice_overlay_ui.m.
------------------------------------------------------------------------
r378 | gaser | 2010-12-23 22:58:55

M       cg_vbm8_batch.m
M       cg_vbm8_longitudinal_multi_run.m

(1) Disabled warning for processing of longitudinal data.
(2) Corrected typo in cg_vbm8_batch.m.
------------------------------------------------------------------------
r379 | gaser | 2010-12-24 00:54:35

Bias correction in longitudinal processing pipeline is disabled if FWHM=0 or
FWHM=Inf.
------------------------------------------------------------------------
r380 | gaser | 2010-12-29 02:01:45

M       cg_vbm8_bias_run.m

Bias correction in longitudinal processing pipeline is disabled if FWHM=0 or
FWHM=Inf.
------------------------------------------------------------------------
r381 | gaser | 2010-12-29 02:10:12

M       cg_vbm8_bias_run.m

Bias correction in longitudinal processing pipeline is disabled if FWHM=0 or
FWHM=Inf.
------------------------------------------------------------------------
r382 | gaser | 2010-12-29 02:12:24